# xft

./: .editorconfig  .gitattributes  .gitignore  Manifest.toml  Project.toml  README.md  checks.sh  mypy.ini  notes.txt  open_2023.py  pyproject.toml
analysis/: batch_rank_modeling.py  embeddings.ipynb  games_trend_modeling.ipynb  rank_modeling_batch.ipynb  rank_modeling_cutoffs.ipynb  rank_modeling_initial.ipynb  rank_modeling_neural.ipynb  summary_stats.ipynb
analysis/modules/: load_xft.py  rank_models.py
configs/: consolidate.yaml  games.yaml  open.yaml
notebooks/: games_trend_modeling.ipynb  prelim.ipynb  rank_correlations.ipynb  rank_modeling_initial.ipynb  rank_modeling_neural.ipynb
notebooks/modules/: rank_models.py
scripts/: arrange.jl  clean.jl  count_leaderboards.jl  scrape.jl  stats.jl  tabulate.jl
site/: index.css  index.html  standalone_competition_cluster_counts.html
site/assets/: competition_cluster_counts.js
workouts/games/2007/: games_2007_individual_workout_1.txt  games_2007_individual_workout_2.txt  games_2007_individual_workout_3.txt
workouts/games/2008/: games_2008_individual_workout_1.txt  games_2008_individual_workout_2.txt  games_2008_individual_workout_3.txt  games_2008_individual_workout_4.txt
workouts/games/2009/: games_2009_individual_workout_1.txt  games_2009_individual_workout_2.txt  games_2009_individual_workout_3.txt  games_2009_individual_workout_4.txt  games_2009_individual_workout_5.txt  games_2009_individual_workout_6.txt  games_2009_individual_workout_7.txt  (+1 more)
xft/: analysis.py  clean.py  cli.py  consolidate.py  download.py  fetch.py  misc.py  models.py  tabulate.py
(+255 files in other folders)
