[tool.poetry]
name = "xft"
version = "0.1.0"
description = ""
authors = ["Mark Baum"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<=3.12"
ipykernel = "^6.29.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
markplotlib = {git = "https://github.com/markmbaum/markplotlib.git"}
openai = "^1.12.0"
scikit-learn = "^1.4.1.post1"
bokeh = "^3.3.4"
scipy = "^1.12.0"
patsy = "^0.5.6"
arviz = "^0.17.0"
pymc = "5.12"
pyarrow = "^15.0.0"
graphviz = "^0.20.1"
statsmodels = "^0.14.1"
theano = "^1.0.5"
torch = "^2.2.1"
mypy = "^1.8.0"
pandas-stubs = "^2.2.0.240218"
black = "^24.2.0"
ruff = "^0.3.0"
xarray = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
