[project]
name = "xft"
version = "0.1.0"
description = "Elite competitive fitness data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2024.9.0",
    "humanize>=4.11.0",
    "markplotlib",
    "numpy==1.24.3",
    "omegaconf>=2.3.0",
    "polars>=1.7.1",
    "pymc>=5.15.0",
    "rich>=13.8.1",
    "scipy>=1.14.1",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "arviz>=0.20.0",
    "ipykernel>=6.29.5",
    "ipython>=8.27.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
]

[tool.uv.sources]
markplotlib = { git = "https://github.com/markmbaum/markplotlib" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
xft = "xft.cli:app"
